Created the whole foundation for the game. The DOM changes when the player continues to the next screen. The player can input an answer. Implemented two visualisations so far, spacing and backwards words.

--- a/css/textstyle.css
+++ b/css/textstyle.css
@@ -4,3 +4,12 @@ backward {
     -webkit-transform: scale(-1, 1);  
     transform: scale(-1, 1); 
 } 
+
+.text_h1_center{
+	text-align: center; 
+	font-weight: bold;"
+}
+
+.text_info{
+	text-align: justify;
+}
