--- a/css/textstyle.css
+++ b/css/textstyle.css
@@ -1,3 +1,17 @@
+upsidedown { 
+     display: inline-block;
+    -moz-transform: scale(-1, 1); 
+    -webkit-transform: scale(-1, 1);  
+    transform: scale(1, -1); 
+} 
+
+backward_upsidedown { 
+     display: inline-block;
+    -moz-transform: scale(-1, 1); 
+    -webkit-transform: scale(-1, 1);  
+    transform: scale(1, -1); 
+} 
+
 backward { 
      display: inline-block;
     -moz-transform: scale(-1, 1); 
@@ -7,9 +21,27 @@ backward {
 
 .text_h1_center{
 	text-align: center; 
-	font-weight: bold;"
 }
 
 .text_info{
 	text-align: justify;
 }
+
+.grey_text{	
+	color: #b3b3b3;		
+}
+
+.title_font{
+	/*font-family: 'Noto Sans', sans-serif;*/
+	font-family: 'Cabin', Helvetica, Arial, sans-serif;
+	text-shadow: 0px 0px 1px #d9d9d9;
+	font-size: 50px;
+}
+
+.info_text{
+	font-family: 'Noto Sans', sans-serif;
+ 	font-size: 15px;
+}
+
+
+
