--- a/css/webstyle.css
+++ b/css/webstyle.css
@@ -4,38 +4,61 @@ header {
 	height: 10%;
 	padding: 4px;
 	border-radius: 10px;
-	background-color: #f0f0f0;
+	/*background-color: #f0f0f0;*/
 }
 
 body {
+	padding-top: 10px;
+    padding-bottom: 40px;
     /*color: white; ÄNDRAR textfärgen för hela dokumentet*/
-    font-family: Arial, Helvetica, sans-serif;
+    /*font-family: Arial, Helvetica, sans-serif;*/
     /* Använd till att ha ett papper som bakgrund senare kanske?
     background: url("assets/images/background.png");
 	background-attachment: fixed;
 	*/
 }
 
+p {
+    font-family: 'Nobile', Helvetica, Arial, sans-serif;
+}
+
+/* Custom container */
+.container-narrow {
+	margin: 0 auto;
+	max-width: 1000px;
+	min-height: 500px;	
+	position: relative;
+}
+.container-narrow > hr {
+	margin: 30px 0;
+}     
+
 #wrapper{
-	width: 60%;
-	height: 70%;
+	/*width: 60%;
+	height: 70%;*/
 	margin: 0 auto;	
 	padding: 32px;
 	border-radius: 10px;
-	background-color: #f0f0f0;
+	/*background-color: #f0f0f0;*/
+	border: 1px solid #f0f0f0;
 }
 
 .center {
     margin: auto;
     width: 60%;
-    border: 3px solid #f0f0f0;
+    border: 3px solid black;
     padding: 10px;
 }
 
 .div_button_continue{
 	text-align:center; 
-	margin-top: 10%; 
-	margin-bottom: 20%;
+	position: absolute; 
+	bottom:5%; 
+	left: 50%;
+	transform: translateX(-50%);
+	font-family: 'Noto Sans', sans-serif;
+	/*margin-top: 10%; 
+	margin-bottom: 20%;*/
 }
 
 
